[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/tower.gd" type="Script" id=1]
[ext_resource path="res://png/png/scifiStructure_1.png" type="Texture" id=2]
[ext_resource path="res://png/png/barHorizontal_green_mid.png" type="Texture" id=3]
[ext_resource path="res://audio/sf_canon_01.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/SFB-explosion2.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.8214, 44.2779 )

[sub_resource type="CircleShape2D" id=2]
radius = 270.0

[node name="tower" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="tour" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="cannon" type="Position2D" parent="tour"]
position = Vector2( 0, -11.9173 )
rotation = 2.6226e-06
scale = Vector2( 0.5, 0.5 )

[node name="Timer" type="Timer" parent="."]

[node name="vie" type="TextureProgress" parent="."]
margin_left = -31.8919
margin_top = -64.0
margin_right = 32.1081
margin_bottom = -56.0
rect_pivot_offset = Vector2( -979.544, -213.349 )
max_value = 2000.0
value = 2000.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="audio2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
